fix nav, remove input outlune, remove target='_blanc' from phone links

--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -22,9 +22,9 @@
   }
 
   &__list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: rem(24);
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: rem(24) rem(30);
   }
 
   &__link {
