add task solution

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,46 @@
+h1,
+h2,
+h3,
+h4,
+p {
+  color: $c-primary-black;
+  margin: 0;
+}
+
 h1 {
   @extend %h1;
+}
+
+h2 {
+  @extend %h2;
+
+  margin-bottom: 40px;
+
+  @include on-tablet {
+    margin-bottom: 48px;
+    font-size: 48px;
+  }
+
+  @include on-desktop {
+    margin-bottom: 56px;
+  }
+}
+
+h3 {
+  @extend %h3;
+
+  margin-bottom: 10px;
+
+  @include on-tablet {
+    margin-bottom: 15px;
+    font-size: 36px;
+  }
+}
+
+h4 {
+  @extend %h4;
+}
+
+p {
+  @extend %p;
 }
