--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,21 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import 'reset';
+@import 'utils';
+@import 'fonts';
+@import 'typography';
+@import './blocks/page';
+@import './blocks/main';
+@import './blocks/logo';
+@import './blocks/divider';
+@import './blocks/header';
+@import './blocks/icon';
+@import './blocks/buttons';
+@import './blocks/nav';
+@import './blocks/top-bar';
+@import './blocks/menu';
+@import './blocks/slider';
+@import './blocks/schedule';
+@import './blocks/current-events';
+@import './blocks/event-card';
+@import './blocks/gallery';
+@import './blocks/subscription';
+@import './blocks/footer';
