--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,32 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
+  font-family: Montserrat, sans-serif;
   font-weight: 400;
+}
+
+%h2 {
+  font-family: Montserrat, sans-serif;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 100%;
+}
+
+%h3 {
+  font-family: Montserrat, sans-serif;
+  font-size: 28px;
+  line-height: 122%;
+  font-weight: 400;
+}
+
+%h4 {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 14px;
+  line-height: 140%;
+  font-weight: 400;
+}
+
+%p {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 16px;
+  line-height: 150%;
+  font-weight: 300;
 }
