--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,27 @@
-$c-gray: #eee;
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
+$effect-duration: 0.3s;
+$padding-inline-mobile: 20px;
+$padding-inline-tablet: 34px;
+$padding-inline-desktop: 55px;
+$column-gap-mobile: 20px;
+$column-gap-tablet-desktop: 30px;
+$c-alto: #e0e0e0;
+$c-tiara: #c5d5d2;
+$c-black-oak: #4e4e4e;
+$c-karaka-orange: #f14a27;
+$c-logn-lake: #687480;
+$c-country-meadow: #1a5a4c;
+$c-donnegal: #8dada6;
+$c-woodsmoke: #18181a;
+$c-marshland: #0f0e08;
+$c-primary-white: #fff;
+$c-primary-dark-white: $c-tiara;
+$c-primary-beige: $c-alto;
+$c-primary-black: $c-marshland;
+$c-primary-light-black: $c-woodsmoke;
+$c-primary-brown: $c-black-oak;
+$c-primary-light-grey: $c-donnegal;
+$c-primary-grey: $c-logn-lake;
+$c-primary-green: $c-country-meadow;
+$c-primary-orange: $c-karaka-orange;
