--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -7,6 +7,14 @@
     }
   }
 
+  &__card-title {
+    @include on-tablet {
+      grid-column: 1 / 5;
+
+      margin-right: auto;
+    }
+  }
+
   &__panorama {
     height: 210px;
     background-image: url('../images/current-events/panorama--lg.png');
