--- a/src/styles/blocks/event-card.scss
+++ b/src/styles/blocks/event-card.scss
@@ -125,39 +125,35 @@
   }
 
   &__title {
-    display: inline-block;
-    position: relative;
-    padding-right: 20px;
+    text-align: center;
+    line-height: 1;
 
-    &::after {
-      content: '';
-      display: block;
-      width: 10px;
-      height: 10px;
-      background-color: $c-primary-orange;
-      position: absolute;
-      top: 50%;
-      right: 0;
-      transform: translateY(-50%);
-    }
-
-    @include on-tablet {
-      grid-column: 1 / 5;
-
-      padding-right: 35px;
-      margin-right: auto;
+    &--open {
+      display: inline-block;
+      position: relative;
+      padding-right: 20px;
 
       &::after {
-        width: 15px;
-        height: 15px;
-        right: 10px;
+        content: '';
+        display: block;
+        width: 10px;
+        height: 10px;
+        background-color: $c-primary-orange;
+        position: absolute;
+        top: 50%;
+        right: 0;
+        transform: translateY(-50%);
       }
-    }
 
-    &--short {
-      padding: 0;
-      text-align: center;
-      line-height: 1;
+      @include on-tablet {
+        padding-right: 35px;
+
+        &::after {
+          width: 15px;
+          height: 15px;
+          right: 10px;
+        }
+      }
     }
   }
 
