--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -73,29 +73,18 @@
     }
   }
 
-  &__input,
-  &__btn {
-    height: 100%;
-  }
-
   &__input {
+    height: 100%;
     flex-grow: 1;
     padding-inline: 24px 12px;
     margin: 0;
 
+    &:focus {
+      outline: none;
+    }
+
     @include on-desktop {
       padding-inline: 32px 16px;
     }
-  }
-
-  &__btn {
-    all: unset;
-    cursor: pointer;
-    display: grid;
-    place-items: center;
-    background-color: $c-primary-orange;
-    aspect-ratio: 1 / 1;
-
-    @include hover(background-color, darken($c-primary-orange, 10%));
   }
 }
