add task solution

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,12 @@
-$c-gray: #eee;
+$font-family-base: 'IBM Plex Sans', sans-serif;
+$font-weight-base: 400;
+$font-size-base: 16px;
+$color-base: #0f0e08;
+$color-primary: #1a5a4c;
+$color-primary-ligth: #687480;
+$color-secondary: #4e4e4e;
+$color-accent: #f14a27;
+$container-width: 1280px;
+$desktop-width: 1280px;
+$tablet-width: 768px;
+$mobile-width: 320px;
