--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -38,6 +38,7 @@
       position: absolute;
       grid-column: 6 / -1;
       height: calc(100vw * 0.51);
+      width: calc(100vw * 0.58);
     }
   }
 
