fix social icons height

--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -218,6 +218,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 24px;
+    width: 24px;
+
+    & .socials__icon {
+      height: 100%;
+    }
 
     .socials__icon path {
       transition: fill 0.3s ease;
