fix changes requested

--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -135,8 +135,11 @@
     line-height: calc(21 / 14);
   }
 
-  &__contacts-text span {
+  &__contacts-link {
     display: inline-block;
+    color: $color-secondary;
+
+    @include hover(color, $color-accent);
   }
 
   &__nav {
