--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -113,6 +113,17 @@
     }
   }
 
+  &__button-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 50px;
+    color: $color-base;
+    text-transform: uppercase;
+    flex: 1;
+    text-align: center;
+    transition: color 0.3s;
+  }
+
   &__button {
     margin-inline: auto;
 
@@ -123,18 +134,18 @@
     @include on-desktop {
       align-self: end;
     }
-  }
 
-  &__button-text {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 50px;
-    color: $color-base;
-    text-transform: uppercase;
-    flex: 1;
-    text-align: center;
+    &:hover {
+      border-color: $color-accent;
+    }
 
-    @include hover(color, $color-accent);
+    &:hover .header__button-text {
+      color: $color-accent;
+    }
+
+    &:hover .header__button-action {
+      background-color: $color-accent;
+    }
   }
 
   &__decor {
