--- a/src/styles/blocks/_icon.scss
+++ b/src/styles/blocks/_icon.scss
@@ -4,6 +4,8 @@
   height: 24px;
   width: 24px;
 
+  @include hover(transform, scale(1.2) rotate(180deg));
+
   &--menu {
     position: absolute;
     top: 27px;
