--- a/src/styles/utils/_common.scss
+++ b/src/styles/utils/_common.scss
@@ -47,6 +47,7 @@ body {
   justify-content: center;
   align-items: center;
   border: 1px solid $color-primary;
+  transition: border-colot 0.3s;
 
   @include on-tablet {
     height: 70px;
@@ -60,8 +61,7 @@ body {
   &__icon {
     padding: 13px;
     background-color: $color-primary;
-
-    @include hover(background-color, $color-accent);
+    transition: background-color 0.3s;
 
     @include on-tablet {
       padding: 23px;
