change foote rlink color

--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -137,7 +137,7 @@
 
   &__contacts-link {
     display: inline-block;
-    color: $color-secondary;
+    color: $color-base;
 
     @include hover(color, $color-accent);
   }
