--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -2,7 +2,7 @@
   position: relative;
 
   @include on-desktop {
-    padding-bottom: 220px;
+    padding-bottom: calc(100vw * 0.17);
   }
 
   &__container {
@@ -80,6 +80,7 @@
       grid-column: 1 / 5;
       padding-top: 206px;
       padding-inline: 55px;
+      height: 42vw;
     }
   }
 
