--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,12 @@
-$c-gray: #eee;
+$white-color-main: #fff;
+$black-color-main: #000;
+$black-second-color: #0F0E08;
+$grey-color: #4E4E4E;
+$hypnotic-color: #687480;
+$rousseau-green: #1A5A4C;
+$karaka-orange: #f14a27;
+
+$tablet-default-width: 640px;
+$desktop-default-width: 1280px;
+
+$effect-duration: 0.3s;
