--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import 'blocks/page';
+@import 'blocks/container';
+@import 'blocks/header';
+@import 'blocks/menu';
+@import 'blocks/nav';
+@import 'blocks/museum-of-art';
+@import 'blocks/current-events';
+@import 'blocks/from-classicism-to-romanticism';
+@import 'blocks/gallery';
+@import 'blocks/subscription';
+@import 'blocks/footer';
