--- a/src/styles/blocks/from-classicism-to-romanticism.scss
+++ b/src/styles/blocks/from-classicism-to-romanticism.scss
@@ -73,7 +73,7 @@
 
     padding-block: 20px;
 
-    box-shadow: 0px 2px 0px 0px rgba(26, 90, 76, 0.25);
+    box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
 
     @include hover (transform, scale(1.04));
 
@@ -111,7 +111,7 @@
     }
 
     &-name {
-      font-family: IBM Plex Sans, sans-serif;
+      font-family: "IBM Plex Sans", sans-serif;
       font-size: 16px;
       font-weight: 500;
       line-height: 16px;
@@ -124,7 +124,7 @@
     }
 
     &-number {
-      font-family: IBM Plex Sans, sans-serif;
+      font-family: "IBM Plex Sans", sans-serif;
       font-size: 16px;
       line-height: 24px;
       font-weight: 700;
