--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -45,7 +45,6 @@
     grid-column: 2 / 2;
 
     @include hover-path-fill(fill, $rousseau-green);
-
     @include hover(transform, scale(1.04));
 
     @include on-tablet {
@@ -68,7 +67,6 @@
     height: 24px;
 
     @include hover(transform, scale(1.04));
-
     @include hover-path-fill(fill, $grey-color);
 
     @include on-tablet {
@@ -133,9 +131,7 @@
 
 
     @include hover(background-color, hwb(0 94% 6%));
-
     @include hover(transform, scale(1.04));
-
     @include hover-path-fill(fill, $black-color-main);
 
     @include on-tablet {
@@ -192,7 +188,7 @@
     transform: rotate(-90deg);
     text-align: left;
 
-    font-family: IBM Plex Sans, sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     color: $hypnotic-color;
     font-size: 14px;
     line-height: 14px;
