--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -33,7 +33,7 @@
     padding-inline: 34px;
   }
 
-  @include on-desktop() {
+  @include on-desktop {
     padding-inline: 55px;
     max-width: 1170px;
     margin-inline: auto;
@@ -50,7 +50,7 @@
     margin-right: -34px;
   }
 
-  @include on-desktop() {
+  @include on-desktop {
     margin-left: -55px;
     margin-right: -55px;
   }
@@ -69,7 +69,7 @@
     --columns-gap: 30px;
   }
 
-  @include on-desktop() {
+  @include on-desktop {
     --columns: 12;
     --columns-gap: 30px;
   }
@@ -88,7 +88,7 @@
     --columns-gap: 30px;
   }
 
-  @include on-desktop() {
+  @include on-desktop {
     --columns: 12;
     --columns-gap: 30px;
   }
