--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -125,7 +125,7 @@
       }
 
       &-name {
-        font-family: IBM Plex Sans, sans-serif;
+        font-family: "IBM Plex Sans", sans-serif;
         font-size: 16px;
         font-weight: 500;
         line-height: 16px;
@@ -140,7 +140,7 @@
       }
 
       &-number {
-        font-family: IBM Plex Sans, sans-serif;
+        font-family: "IBM Plex Sans", sans-serif;
         font-size: 16px;
         line-height: 24px;
         font-weight: 700;
@@ -176,7 +176,7 @@
     }
 
     &-text {
-      font-family: IBM Plex Sans, sans-serif;
+      font-family: "IBM Plex Sans", sans-serif;
       font-size: 16px;
       line-height: 24px;
       text-align: left;
