--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -54,7 +54,7 @@
       display: block;
     }
 
-    @include hover (transform, scale(1.04));
+    @include hover(transform, scale(1.04));
 
     @include on-tablet {
       height: 543px;
@@ -139,12 +139,11 @@
   &__nav-point {
     height: 9px;
     width: 9px;
-    background-color: #E0E0E0;
+    background-color: #e0e0e0;
     border-radius: 50%;
 
     &-active {
       background-color: $rousseau-green;
     }
   }
-
 }
