--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -90,7 +90,6 @@
     margin-top: 250px;
     margin-bottom: 20px;
 
-
     @include on-tablet {
       font-size: 54px;
       font-weight: 700;
@@ -128,7 +127,6 @@
     border: 1px solid $rousseau-green;
 
     margin-bottom: 70px;
-
 
     @include hover(background-color, hwb(0 94% 6%));
     @include hover(transform, scale(1.04));
@@ -188,7 +186,7 @@
     transform: rotate(-90deg);
     text-align: left;
 
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: 'IBM Plex Sans', sans-serif;
     color: $hypnotic-color;
     font-size: 14px;
     line-height: 14px;
