--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,9 +1,9 @@
 $white-color-main: #fff;
 $black-color-main: #000;
-$black-second-color: #0F0E08;
-$grey-color: #4E4E4E;
+$black-second-color: #0f0e08;
+$grey-color: #4e4e4e;
 $hypnotic-color: #687480;
-$rousseau-green: #1A5A4C;
+$rousseau-green: #1a5a4c;
 $karaka-orange: #f14a27;
 $tablet-default-width: 640px;
 $desktop-default-width: 1280px;
