--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -141,7 +141,7 @@
         text-decoration: none;
         cursor: pointer;
 
-        @include hover(color, $grey-color);
+        @include hover(color, $hypnotic-color);
       }
     }
 
