--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -107,6 +107,10 @@
       border: none;
       padding: 18px 24px;
 
+      &:focus {
+        outline: none;
+      }
+
       @include on-tablet {
         width: 374px;
       }
