--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,19 +1,25 @@
 @import 'nav';
 
 .menu {
-  height: 399px;
-  background-color: $rousseau-green;
-
-  padding-block: 26px;
-
-  @include on-tablet {
-    padding-block: 40px;
-    height: 225px;
-  }
+  height: 100vh;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
 
   &__content {
     @include on-tablet {
       @include page-grid;
+    }
+  }
+
+  &__background {
+    height: 399px;
+    background-color: $rousseau-green;
+
+    padding-block: 26px;
+
+    @include on-tablet {
+      padding-block: 40px;
+      height: 225px;
     }
   }
 
