--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 @import 'utils';
-@import 'fonts';
-@import 'typography';
+@import 'blocks';
 
-body {
-  background: $c-gray;
+* {
+  margin: 0;
+  padding: 0;
 }
