--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -8,4 +8,8 @@
   &--menu {
     background-image: url('../images/icons/menu-icon.png');
   }
+
+  &--close {
+    background-image: url('../images/icons/close-icon.png');
+  }
 }
