--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,3 +1,17 @@
 .page {
   scroll-behavior: smooth;
+
+  &__menu {
+    position: fixed;
+    top:0;
+    left:0;
+    right:0;
+    opacity:0;
+    pointer-events: none;
+
+    &:target {
+      opacity:1;
+      pointer-events: all;
+    }
+  }
 }
