--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -1,6 +1,17 @@
 .top-bar {
   display: flex;
-  align-items: center;
+  padding: 27px 0 24px;
+  gap: 28px;
+
+  @include on-tablet {
+    padding-block: 39px;
+    gap: 48px;
+  }
+
+  @include on-desktop {
+    gap: 72px;
+  }
+
 
   &__logo {
     display: inline-block;
@@ -11,22 +22,22 @@
     line-height: 30px;
     text-align: center;
     text-decoration: none;
-    position: relative;
-    left: 30%;
-    padding-top: 9px;
+    position: absolute;
+    transform: translateX(-50%);
+    left: 50%;
+    top: 9px;
 
     @include on-tablet {
       font-size: 36px;
       line-height: 36px;
-      padding-top: 15px;
-      left: 55%;
+      left: 60%;
+      top: 15px;
     }
 
     @include on-desktop {
       font-size: 36px;
       line-height: 36px;
-      padding-top: 15px;
-      left: 45%;
+      left: 50%;
     }
   }
 }
