--- a/src/styles/utils/vars.scss
+++ b/src/styles/utils/vars.scss
@@ -5,3 +5,4 @@ $green-color: rgba(26, 90, 76, 1);
 $grey-color: rgba(78, 78, 78, 1);
 $grey-blue-color: rgba(104, 116, 128, 1);
 $orange-color: rgba(241, 74, 39, 1);
+$white-color: rgba(255, 255, 255, 1);
