--- a/src/styles/blocks.scss
+++ b/src/styles/blocks.scss
@@ -3,3 +3,6 @@
 @import 'blocks/header';
 @import 'blocks/top-bar';
 @import 'blocks/icon';
+@import 'blocks/menu';
+@import 'blocks/nav';
+@import 'blocks/schedule';
