add relevant events

--- a/src/styles/blocks.scss
+++ b/src/styles/blocks.scss
@@ -6,3 +6,6 @@
 @import 'blocks/menu';
 @import 'blocks/nav';
 @import 'blocks/schedule';
+@import 'blocks/main';
+@import 'blocks/relevant';
+@import 'blocks/event';
