--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,11 +1,14 @@
 .header {
-  height: 100vh;
   position: relative;
 
-  &__content {
+  @include on-tablet {
     height: 100vh;
+  }
 
+  &__content {
     @include on-tablet {
+      height: 100vh;
+
       @include page-grid;
     }
   }
@@ -45,15 +48,14 @@
     font-weight: 700;
     line-height: 45px;
     text-align: center;
-    color: $black-color;
-    padding-block: 20px;
+    margin-block: 20px;
 
     @include on-tablet {
       font-size: 54px;
       line-height: 64.8px;
       text-align: left;
       word-wrap: normal;
-      padding-block: 0;
+      margin-block: 0;
     }
 
     @include on-desktop {
