--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,17 +1,22 @@
 .page {
+  color: $black-color;
   scroll-behavior: smooth;
 
   &__menu {
     position: fixed;
-    top:0;
-    left:0;
-    right:0;
-    opacity:0;
+    z-index: 5;
+    top: 0;
+    left: 0;
+    right: 0;
+    opacity: 0;
     pointer-events: none;
+    transition: all $speed-animation;
+    transform: translateY(-100%);
 
     &:target {
-      opacity:1;
+      opacity: 1;
       pointer-events: all;
+      transform: translateY(0);
     }
   }
 }
