--- a/src/styles/utils/vars.scss
+++ b/src/styles/utils/vars.scss
@@ -1,5 +1,6 @@
 $tablet-min-width: 768px;
 $desktop-min-width: 1280px;
+$speed-animation: 0.3s;
 $black-color: rgba(15, 14, 8, 1);
 $green-color: rgba(26, 90, 76, 1);
 $grey-color: rgba(78, 78, 78, 1);
