--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -1,11 +1,17 @@
 .main {
-  padding-block: 70px;
+  &__content {
+    display: grid;
+    row-gap: 100px;
+    padding-block: 70px;
 
-  @include on-tablet {
-    padding-block: 88px;
-  }
+    @include on-tablet {
+      row-gap: 88px;
+      padding-block: 88px;
+    }
 
-  @include on-desktop {
-    padding-block: 200px;
+    @include on-desktop {
+      row-gap: 200px;
+      padding-block: 200px;
+    }
   }
 }
