--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -22,12 +22,12 @@
 
   display: grid;
   grid-template-columns: repeat(var(--columns), 1fr);
-  grid-gap: 20px;
+  column-gap: 20px;
 
   @include on-tablet {
     --columns: 6;
 
-    grid-gap: 30px;
+    column-gap: 30px;
   }
 
   @include on-desktop {
