--- a/src/styles/utils/vars.scss
+++ b/src/styles/utils/vars.scss
@@ -4,6 +4,7 @@ $speed-animation: 0.3s;
 $black-color: rgba(15, 14, 8, 1);
 $green-color: rgba(26, 90, 76, 1);
 $grey-color: rgba(78, 78, 78, 1);
+$grey-light-color: rgba(224, 224, 224, 1);
 $grey-blue-color: rgba(104, 116, 128, 1);
 $orange-color: rgba(241, 74, 39, 1);
 $white-color: rgba(255, 255, 255, 1);
