--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -12,10 +12,6 @@
     margin-bottom: 104px;
   }
 
-  &--box {
-    display: block;
-  }
-
   &__content {
     margin: auto 0;
 
@@ -52,6 +48,7 @@
 
   &__img {
     width: 100%;
+    height: 100%;
     margin-bottom: 20px;
 
     @include on-tablet {
@@ -156,5 +153,14 @@
     line-height: 24px;
     text-align: left;
     color: $grey-color;
+  }
+
+  &--box {
+    display: block;
+    margin-bottom: 42px;
+
+    @include on-tablet {
+      margin-bottom: 92px;
+    }
   }
 }
