--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -12,6 +12,7 @@
       width: 460px;
       padding-block: 82px;
     }
+
     @include on-desktop {
       width: 570px;
       padding-block: 163px;
@@ -44,18 +45,31 @@
       line-height: 18px;
       margin-bottom: 64px;
     }
+
     @include on-desktop {
       margin-bottom: 72px;
     }
   }
 
-  &__link {
+  &__form {
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+
+    @include on-tablet {
+      justify-content: space-between;
+    }
+
+  }
+
+  &__input {
     font-family: Montserrat, sans-serif;
     font-size: 14px;
     line-height: 14px;
     text-align: left;
     color: $grey-blue-color;
     text-decoration: none;
+    border: none;
 
     box-sizing: border-box;
     width: 230px;
@@ -75,16 +89,7 @@
   }
 
   &__button {
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-
-    @include on-tablet {
-      justify-content: space-between;
-    }
-
-    &--arrow {
-      background-image: url('../images/icons/arrow-button-black.png');
+    background-image: url('../images/icons/arrow-button-black.png');
       background-position: center;
       background-size: 24px;
       background-repeat: no-repeat;
@@ -92,11 +97,12 @@
       width: 50px;
       height: 50px;
       background-color: $orange-color;
+      border: none;
+      cursor: pointer;
 
       @include on-tablet {
         width: 70px;
         height: 70px;
       }
-    }
   }
 }
