--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -22,4 +22,12 @@
       grid-column: 7 / 12;
     }
   }
+
+  &__overlay {
+    position: absolute;
+    background-color: black;
+    opacity: .5;
+    height: 100vh;
+    width: 100%;
+  }
 }
