--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,6 +2,12 @@
   color: $black-color;
   scroll-behavior: smooth;
 
+  &__body {
+    &:target {
+      opacity: 0.5;
+    }
+  }
+
   &__menu {
     position: fixed;
     z-index: 5;
