--- a/src/styles/blocks.scss
+++ b/src/styles/blocks.scss
@@ -2,6 +2,7 @@
 @import 'blocks/container';
 @import 'blocks/header';
 @import 'blocks/top-bar';
+@import 'blocks/logo';
 @import 'blocks/icon';
 @import 'blocks/menu';
 @import 'blocks/nav';
@@ -12,3 +13,5 @@
 @import 'blocks/gallery';
 @import 'blocks/slider';
 @import 'blocks/subscribe';
+@import 'blocks/footer';
+@import 'blocks/contacts';
