--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -12,4 +12,14 @@
   &--close {
     background-image: url('../images/icons/close-icon.png');
   }
+
+  &--facebook {
+    background-image: url('../images/icons/facebook-icon.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+
+  &--instagram {
+    background-image: url('../images/icons/instagram-icon.png');
+  }
 }
