--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -2,16 +2,16 @@
   &__content {
     display: grid;
     row-gap: 100px;
-    padding-block: 70px;
+    padding-block: 70px 50px;
 
     @include on-tablet {
       row-gap: 88px;
-      padding-block: 88px;
+      padding-block: 88px 50px;
     }
 
     @include on-desktop {
       row-gap: 200px;
-      padding-block: 200px;
+      padding-block: 200px 50px;
     }
   }
 }
