--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -25,8 +25,8 @@
 
   &__overlay {
     position: absolute;
-    background-color: black;
-    opacity: .5;
+    background-color: $black-color;
+    opacity: 0.5;
     height: 100vh;
     width: 100%;
   }
