--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -52,6 +52,7 @@
     font-weight: 400;
     line-height: 21px;
     text-align: left;
+    word-wrap: break-word;
 
     &--strong {
       font-family: 'IBM Plex Sans', sans-serif;
