--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -59,7 +59,6 @@
     @include on-tablet {
       justify-content: space-between;
     }
-
   }
 
   &__input {
@@ -90,19 +89,20 @@
 
   &__button {
     background-image: url('../images/icons/arrow-button-black.png');
-      background-position: center;
-      background-size: 24px;
-      background-repeat: no-repeat;
-      display: inline-block;
-      width: 50px;
-      height: 50px;
-      background-color: $orange-color;
-      border: none;
-      cursor: pointer;
+    background-position: center;
+    background-size: 24px;
+    background-repeat: no-repeat;
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    background-color: $orange-color;
+    border: none;
+    cursor: pointer;
+    border-radius: 0;
 
-      @include on-tablet {
-        width: 70px;
-        height: 70px;
-      }
+    @include on-tablet {
+      width: 70px;
+      height: 70px;
+    }
   }
 }
