--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -73,6 +73,10 @@
         padding-inline: 0;
       }
     }
+
+    &:hover {
+      @include hover(transform, scale(1.05));
+    }
   }
 
   &__top {
