--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -13,7 +13,7 @@
     }
   }
 
-  &__top {
+  &__top-bar {
     height: 300px;
 
     @include on-tablet {
@@ -26,7 +26,7 @@
     }
   }
 
-  &__info {
+  &__art-museum {
     margin: 0 auto;
     width: fit-content;
     height: fit-content;
@@ -157,5 +157,20 @@
     @include on-desktop {
       width: 55%;
     }
+  }
+
+  &__up {
+    position: fixed;
+    z-index: 10;
+    right: 20px;
+    bottom: 20px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 1px solid $green-color;
+    background-image: url('../images/icons/arrow-up.png');
+    background-size: 16px;
+    background-repeat: no-repeat;
+    background-position: center;
   }
 }
