--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -31,6 +31,10 @@
     background-size: cover;
     background-position: top;
 
+    &:hover {
+      @include hover(transform, scale(1.05));
+    }
+
     &--1 {
       grid-column: 1 / 4;
       background-image: url('../images/gallery/ukrainian-woman.png');
