--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -95,11 +95,24 @@
       margin-bottom: 0;
     }
 
+    .nav__item {
+      &:hover {
+        transform: none;
+      }
+    }
+
     .nav__link {
       color: $black-color;
       font-size: 14px;
       font-weight: 400;
       line-height: 14px;
+
+      &:hover {
+        transition: font-size $speed-animation;
+font-size: 14.5px;
+        color: $green-color;
+
+      }
 
       @include on-desktop {
         color: $black-color;
