--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -136,6 +136,12 @@
     @include on-desktop {
       grid-column: 3 / 6;
     }
+
+    &:hover {
+      transition: transform $speed-animation;
+      transform: translateY(-5px);
+      box-shadow: 0 3px 5px rgba(26, 90, 76, 0.5);
+    }
   }
 
   &__bg {
@@ -172,5 +178,9 @@
     background-size: 16px;
     background-repeat: no-repeat;
     background-position: center;
+
+    &:hover {
+      background-color: $white-color;
+    }
   }
 }
