--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -5,6 +5,8 @@
   background-size: cover;
   background-position: center;
 
+  @include hover (transform, scale(1.2));
+
   &--menu {
     background-image: url('../images/icons/menu-icon.png');
   }
