--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -22,6 +22,10 @@
 
   &__item {
     list-style: none;
+    &:hover {
+      transition: transform $speed-animation;
+      transform: scale(1.05);
+    }
   }
 
   &__link {
@@ -40,5 +44,5 @@
       line-height: 22px;
       text-align: left;
     }
-  }
+   }
 }
