--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,12 +2,6 @@
   color: $black-color;
   scroll-behavior: smooth;
 
-  &__body {
-    &:target {
-      opacity: 0.5;
-    }
-  }
-
   &__menu {
     position: fixed;
     z-index: 5;
@@ -24,5 +18,9 @@
       pointer-events: all;
       transform: translateY(0);
     }
+  }
+
+   &:has(.page__menu:target) {
+    overflow: hidden;
   }
 }
