--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -69,6 +69,7 @@
     color: $grey-blue-color;
     text-decoration: none;
     border: none;
+    outline: none;
 
     box-sizing: border-box;
     width: 230px;
@@ -103,6 +104,12 @@
     @include on-tablet {
       width: 70px;
       height: 70px;
+    }
+
+    &:hover {
+      transition: transform $speed-animation;
+      transform: translateX(5px);
+      box-shadow: -5px 0 5px rgba(241, 74, 39, 0.3);
     }
   }
 }
