--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -1,6 +1,5 @@
 .contacts {
-  &__title,
-  &__text {
+  &__title, &__link{
     font-family: 'IBM Plex Sans', sans-serif;
     font-size: 14px;
     font-weight: 400;
@@ -12,7 +11,15 @@
     margin-bottom: 20px;
   }
 
-  &__text {
+
+  &__link {
+    display: block;
     line-height: 21px;
+    color: inherit;
+    text-decoration: none;
+
+    &:hover {
+      color: $green-color;
+    }
   }
 }
