--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -5,6 +5,7 @@
   @include on-tablet {
     @include page-grid;
 
+    row-gap: 40px;
     margin-bottom: 64px;
   }
 
@@ -53,12 +54,11 @@
 
     @include on-tablet {
       grid-column: span 6;
-      margin-bottom: 40px;
+      margin-bottom: 0;
     }
 
     @include on-desktop {
       grid-column: 1 / 8;
-      margin-bottom: 0;
     }
 
     &--all-width {
@@ -74,9 +74,7 @@
       }
     }
 
-    &:hover {
-      @include hover(transform, scale(1.05));
-    }
+    @include hover(transform, scale(1.05));
   }
 
   &__top {
@@ -147,6 +145,7 @@
 
     &--box {
       text-align: center;
+      justify-content: center;
 
       @include on-tablet {
         text-align: left;
