--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -106,12 +106,10 @@
       font-size: 14px;
       font-weight: 400;
       line-height: 14px;
+      transition: color $speed-animation;
 
       &:hover {
-        transition: font-size $speed-animation;
-font-size: 14.5px;
         color: $green-color;
-
       }
 
       @include on-desktop {
