--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -137,8 +137,9 @@
       grid-column: 3 / 6;
     }
 
+    transition: all $speed-animation;
+
     &:hover {
-      transition: transform $speed-animation;
       transform: translateY(-5px);
       box-shadow: 0 3px 5px rgba(26, 90, 76, 0.5);
     }
@@ -178,8 +179,10 @@
     background-size: 16px;
     background-repeat: no-repeat;
     background-position: center;
+    transition: all $speed-animation;
 
     &:hover {
+      box-shadow: 2px 2px 5px rgba(26, 90, 76, 0.5);
       background-color: $white-color;
     }
   }
