--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -106,8 +106,9 @@
       height: 70px;
     }
 
+    transition: all $speed-animation;
+
     &:hover {
-      transition: transform $speed-animation;
       transform: translateX(5px);
       box-shadow: -5px 0 5px rgba(241, 74, 39, 0.3);
     }
