--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -1,5 +1,6 @@
 .contacts {
-  &__title, &__link{
+  &__title,
+  &__link {
     font-family: 'IBM Plex Sans', sans-serif;
     font-size: 14px;
     font-weight: 400;
@@ -10,7 +11,6 @@
   &__title {
     margin-bottom: 20px;
   }
-
 
   &__link {
     display: block;
