update form and slider

--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -1,6 +1,6 @@
 .slider {
   &__slides {
-    overflow-x: auto;
+    overflow: auto hidden;
     scroll-snap-type: x mandatory;
     display: flex;
     gap: 16px;
