--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,11 @@
 $c-gray: #eee;
+$c-text-black: #000;
+$c-text-h3: #0f0e08;
+$c-text-h2: #687480;
+$c-text-white: #fff;
+$c-text-description: #4e4e4e;
+$c-green: #1a5a4c;
+$tablet-min-width: 640px;
+$desktop-small-min-width: 1280px;
+$desktop-min-width: 1440px;
+$effect-duration: 0.3s;
