--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,23 @@
-@import 'utils';
 @import 'fonts';
 @import 'typography';
+@import 'utils/vars';
+@import 'utils/mixins';
+@import 'utils/extends';
+@import 'block/header';
+@import 'block/page';
+@import 'block/icon';
+@import 'block/tickets';
+@import 'block/buttons-header';
+@import 'block/menu';
+@import 'block/nav';
+@import 'block/work-schedule';
+@import 'block/current-events';
+@import 'block/classicism-romanticism';
+@import 'block/gallery';
+@import 'block/subcription';
+@import 'block/contacts';
+@import 'block/footer';
+@import 'block/go-top';
 
 body {
   background: $c-gray;
