add task solution

--- a/src/styles/block/gallery.scss
+++ b/src/styles/block/gallery.scss
@@ -103,6 +103,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: left;
+
+    @include hover(transform, scale(1.05));
   }
 }
 
