--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,16 @@
-@import 'utils';
-@import 'fonts';
-@import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import './utils/common';
+@import './utils/mixins';
+@import './utils/reset';
+@import './utils/vars';
+@import './blocks/events';
+@import './blocks/footer';
+@import './blocks/gallery';
+@import './blocks/header';
+@import './blocks/icon';
+@import './blocks/main';
+@import './blocks/menu';
+@import './blocks/nav';
+@import './blocks/page';
+@import './blocks/schedule';
+@import './blocks/slider';
+@import './blocks/subscription';
