--- a/src/styles/block/contacts.scss
+++ b/src/styles/block/contacts.scss
@@ -162,6 +162,16 @@
     color: $c-text-h3;
     margin: 0;
     padding-top: 0;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  &--text {
+    margin: 0;
+
+    @include hover(transform, scale(1.05));
+
+    transform-origin: left;
   }
 }
 
@@ -177,8 +187,7 @@
 
   @include on-desktop-small {
     border-top: none;
-    border-left: 1px solid $c-green;
-    opacity: 50%;
+    border-left: 1px solid rgba($color: $c-green, $alpha: 0.5);
     grid-column: 7 / 8;
     margin: 0;
     width: 1px;
