add task solution

--- a/src/styles/block/contacts.scss
+++ b/src/styles/block/contacts.scss
@@ -187,7 +187,7 @@
 
   @include on-desktop-small {
     border-top: none;
-    border-left: 1px solid rgba($color: $c-green, $alpha: 0.5);
+    border-left: 1px solid rgba(26, 90, 76, 0.5);
     grid-column: 7 / 8;
     margin: 0;
     width: 1px;
