--- a/src/styles/block/contacts.scss
+++ b/src/styles/block/contacts.scss
@@ -177,8 +177,7 @@
 
 .gray-line {
   grid-column: 1 / -1;
-  border-top: 1px solid $c-green;
-  opacity: 50%;
+  border-top: 1px solid rgba(26, 90, 76, 0.2);
   margin: 70px 0 40px;
 
   @include on-tablet {
@@ -187,7 +186,7 @@
 
   @include on-desktop-small {
     border-top: none;
-    border-left: 1px solid rgba(26, 90, 76, 0.5);
+    border-left: 1px solid rgba(26, 90, 76, 0.2);
     grid-column: 7 / 8;
     margin: 0;
     width: 1px;
